[gd_scene load_steps=6 format=3 uid="uid://b6sidrweg1p0"]

[ext_resource type="Shader" uid="uid://dcwirhvnici6e" path="res://shaders/outline_recolor.gdshader" id="1_720lx"]
[ext_resource type="Script" uid="uid://ccv0o03iblf8l" path="res://scenes/interactive/interactable.gd" id="1_m6fs8"]
[ext_resource type="Script" uid="uid://e536tfomryho" path="res://scripts/interactive_handler.gd" id="6_wipk1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5j7o3"]
resource_local_to_scene = true
shader = ExtResource("1_720lx")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0
shader_parameter/row = -1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_356m4"]
resource_local_to_scene = true
size = Vector2(12, 10)

[node name="Interactable" type="Area2D"]
light_mask = 7
visibility_layer = 7
material = SubResource("ShaderMaterial_5j7o3")
script = ExtResource("1_m6fs8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
z_index = 255
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_356m4")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
light_mask = 7
visibility_layer = 7
use_parent_material = true

[node name="InteractiveHandler" type="Node" parent="."]
script = ExtResource("6_wipk1")

[connection signal="area_entered" from="." to="InteractiveHandler" method="_on_area_entered"]
[connection signal="area_exited" from="." to="InteractiveHandler" method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="InteractiveHandler" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="InteractiveHandler" method="_on_mouse_exited"]
